# passport-card-2-json

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  document_ocr_api_prompt.md  pyproject.toml  railway.json
app/: __init__.py  config.py  exceptions.py  main.py
app/api/: __init__.py  dependencies.py  routes_documents.py  routes_health.py
app/core/: __init__.py  document_classifier.py  mrz_parser.py  ocr_engine.py  preprocessing.py
app/extractors/: __init__.py  base.py  birth_certificate.py  id_card.py  passport.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: __init__.py  extraction.py
app/utils/: __init__.py  date_parser.py  pdf_utils.py  text_normalize.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_birth_certificate.py  test_date_parser.py  test_id_card.py  test_mrz.py  test_passport.py  test_pdf_input.py  test_real_fixtures.py  test_validation.py
