[project]
name = "document-ocr-api"
version = "0.1.0"
description = "FastAPI OCR service for Uzbek passports, ID cards, and birth certificates."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<2.0",
    "pytesseract>=0.3.10",
    "passporteye>=2.2.2",
    "PyMuPDF>=1.24.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
fallback = ["easyocr>=1.7.1"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4"]
# B008: FastAPI relies on `Depends(...)` / `File(...)` / `Form(...)` in argument
# defaults — that's the documented idiom, not an anti-pattern.
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "build/", ".venv/"]

[[tool.mypy.overrides]]
module = ["passporteye.*", "easyocr.*", "pytesseract.*", "cv2.*", "fitz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
